# chiffon

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.executor  Dockerfile.litellm  Dockerfile.llamacpp  GITEA_RUNNER_REQUIREMENTS.md  README.md  WINDOWS_BOOTSTRAP.md  docker-compose.executor.yml  docker-compose.llamacpp.yml  docker-compose.ollama.yml  docker-compose.production.yml  docker-compose.yml  docker-entrypoint-executor.sh  pyproject.toml
.claude/: .fuse_hidden000229a7000000e0
.gitea/workflows/: build-executor.yml
.github/workflows/: ci.yml  publish-llamacpp.yml
.planning/: 1-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-01-project-structure.md  01-02-SUMMARY.md  01-02-postgresql-PLAN.md  01-03-SUMMARY.md  01-03-agent-PLAN.md  01-04-SUMMARY.md  01-04-litellm-docker-PLAN.md  01-05-SUMMARY.md  01-05-documentation-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-message-bus/: 02-01-SUMMARY.md  02-01-rabbitmq-PLAN.md  02-02-SUMMARY.md  02-02-protocol-PLAN.md  02-03-SUMMARY.md  02-03-agent-framework-PLAN.md  02-04-SUMMARY.md  02-05-SUMMARY.md  (+5 more)
ansible/: deploy-llamacpp.yml
ansible/templates/: docker-compose.ghcr.yml.j2  docker-compose.gitea.yml.j2
config/: litellm-config.json
docs/: ARCHITECTURE.md  PROTOCOL.md  SETUP.md  UI-DEPLOYMENT.md  agent-protocol.yaml
docs/plans/: 2026-02-02-dual-agent-orchestration-design.md  2026-02-02-executor-worker-agent.md  2026-02-27-chiffon-feedback-loops.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_agent_registry.py  003_desktop_agent_resources.py  004_audit_columns.py  005_playbook_mappings.py  006_playbook_cache.py  007_playbook_suggestions.py
scripts/: deploy-production.sh  deploy-validate.sh  query_examples.sql  seed_sample_data.py  test-foundation.sh
src/: __init__.py
src/agents/: __init__.py  base.py  desktop_agent.py  test_agent.py
src/chiffon/: __init__.py  __main__.py  cli.py  gitea_client.py  task_materializer.py
src/common/: __init__.py  config.py  database.py  exceptions.py  litellm_client.py  models.py  protocol.py  rabbitmq.py  resource_tracker.py
src/dashboard/: __init__.py  api.py  main.py  models.py  websocket.py
src/orchestrator/: __init__.py  api.py  audit.py  fallback.py  git_service.py  main.py  nlu.py  pause_manager.py  planner.py  router.py  service.py
tests/: README.md  __init__.py  conftest.py  test_agent_framework.py  test_agent_router.py  test_audit_schema.py  test_audit_service.py  test_cli_run_once.py  test_dashboard_api.py  test_dashboard_websocket.py  test_desktop_agent_e2e.py  test_desktop_agent_heartbeat.py  test_e2e_message_bus.py  test_enhanced_task_schema.py  test_executor.py  test_fallback_integration.py  test_file_queue.py  test_full_workflow_e2e.py  test_git_service.py  test_gitea_client.py  test_gitea_label_helpers.py  test_infra_agent_e2e.py  test_infra_agent_foundation.py  test_infra_orchestrator_integration.py  test_kuma_deployment_validation.py  test_litellm_client.py  test_llm_client.py  test_orchestrator_api.py  test_orchestrator_capacity_api.py  test_orchestrator_desktop_integration.py  test_orchestrator_e2e.py  test_pause_manager.py  test_playbook_analyzer.py  test_playbook_executor.py  test_prompt_builder.py  test_protocol.py  test_protocol_contract.py  test_request_parser.py  test_resource_tracker.py  test_skills_registry.py  (+7 more)
(+138 files in other folders)
